--- a/exercise.api/exercise.api.csproj
+++ b/exercise.api/exercise.api.csproj
@@ -11,4 +11,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="DataContext\" />
+    <Folder Include="Repository\" />
+  </ItemGroup>
+
 </Project>
